@@ -55,7 +55,7 @@
       }
 
       list($record) = $this->m_node->selectDb($this->m_postvars['atkselector'],"","","","","edit");
-      
+
       // allowed to edit record?
       if (!$this->allowed($record))
       {
@@ -176,10 +176,10 @@
       $data = $node->editArray($mode, $record, $forceList, $suppressList, $fieldprefix, $ignoreTab);
       // Format some things for use in tpl.
       /* check for errors and display them */
-      $tab = $node->getActiveTab();      
+      $tab = $node->getActiveTab();
       $error_title = "";
       $pk_err_attrib = array();
-      
+
       // Handle errors
       $errors = array();
       if (count($data['error']) > 0)
@@ -242,37 +242,41 @@
       {
         $field = &$data["fields"][$i];
         $tplfield = array();
-        
-        $classes = array();        
+
+        $classes = array();
         if ($field["sections"] == "*")
         {
-          $classes[] = "alltabs";          
+          $classes[] = "alltabs";
         }
         else if ($field["html"] == "section")
         {
           // section should only have the tab section classes
           foreach ($field["tabs"] as $section)
-            $classes[] = "section_".str_replace('.', '_', $section);            
+            $classes[] = "section_".str_replace('.', '_', $section);
         }
         else if (is_array($field["sections"]))
         {
-          foreach ($field["sections"] as $section)          
-            $classes[] = "section_".str_replace('.', '_', $section);          
+          foreach ($field["sections"] as $section)
+            $classes[] = "section_".str_replace('.', '_', $section);
         }
-                
-        $tplfield["class"] = implode(" ", $classes);
-		    $tplfield["tab"] = $tplfield["class"]; // for backwards compatibility		    
 
-		    // visible sections, both the active sections and the tab names (attribute that are 
+        if (isset($field["initial_hidden"]) && $field["initial_hidden"])
+        {
+          $classes[] = "atkAttrRowHidden";
+        }
+
+        $tplfield["class"] = implode(" ", $classes);
+		    $tplfield["tab"] = $tplfield["class"]; // for backwards compatibility
+
+		    // visible sections, both the active sections and the tab names (attribute that are
 		    // part of the anonymous section of the tab)
 		    $visibleSections = array_merge($this->m_node->getActiveSections($tab, $mode), $this->m_node->getTabs($mode));
-		    
+
 		    // Todo fixme: initial_on_tab kan er uit, als er gewoon bij het opstarten al 1 keer showTab aangeroepen wordt (is netter dan aparte initial_on_tab check)
-		    // maar, let op, die showTab kan pas worden aangeroepen aan het begin.		    		    		    
-		    atk_var_dump($field["tabs"], "<h1>FIELDTABS ".$field["name"]."</h1>");
+		    // maar, let op, die showTab kan pas worden aangeroepen aan het begin.
     		$tplfield["initial_on_tab"] =
     		   ($field["tabs"] == "*" || in_array($tab, $field["tabs"])) &&
-           (!is_array($field["sections"]) || count(array_intersect($field['sections'], $visibleSections)) > 0);    		   
+           (!is_array($field["sections"]) || count(array_intersect($field['sections'], $visibleSections)) > 0);
 
         // ar_ stands voor 'attribrow'.
 		    $tplfield["rowid"] = "ar_".($field['id']!=''?$field['id']:getUniqueID("anonymousattribrows")); // The id of the containing row
@@ -381,7 +385,7 @@
 
 	    return $result;
     }
-        
+
     /**
      * Create the clickable label for the section.
      *
@@ -389,22 +393,22 @@
      * @return string Html
      */
     function getSectionControl($field, $mode)
-    { 
+    {
       // our name
       list($tab, $section) = explode('.', $field["name"]);
       $name = "section_{$tab}_{$section}";
-     
+
       // create onclick statement.
       $onClick = " onClick=\"javascript:handleSectionToggle(this);\"";
 
       // label
       $label = atktext($name, $this->m_node->m_module, $this->m_node->m_type, '', '', true);
-      if ($label == NULL) 
+      if ($label == NULL)
         $label = atktext("{$tab}_{$section}", $this->m_node->m_module, $this->m_node->m_type, '', '', true);
       if ($label == NULL)
         $label = $this->m_node->text($section);
-      
-      $initClass = "openedSection";      
+
+      $initClass = "openedSection";
       //if the section is not active, we close it on load.
       if (!in_array($field["name"],$this->m_node->getActiveSections($tab, $mode)))
       {
@@ -412,11 +416,11 @@
         $page = &$this->getPage();
         $page->register_scriptcode("addClosedSection('$name');");
       }
-      
+
       // create the clickable link
       return '<a href="javascript:void(0)" id="'.$name.'" class="atksection '.$initClass.'"'.$onClick.'>'.$label.'</a>';
     }
-    
+
     /**
      * Adds numbering to the label of a field
      * @access private
